--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -5,7 +5,7 @@ width: 1371px;
 height: 207px;
 top: 64px;
 right: 5px;
-background: #e7e9f4;
+background: #F5F5F5;
 border-right: solid black;
 border-left:solid black;
 border-width: 100px;
@@ -15,11 +15,12 @@ border-width: 100px;
 position: absolute;
 width: 506px;
 height: 29px;
-left: 417px;
+left: 50px;
 top: 41px;
-font-family: 'Edu TAS Beginner', cursive;
+font-family: 'Inter';
+font-style: normal;
 font-weight: 700;
-font-size: 64px;
+font-size: 24px;
 line-height: 29px;
 color: #000000;
 
@@ -30,7 +31,7 @@ color: #000000;
     top:200px;
     width:1371px;
     margin-top:30px;
-    background: #e7e9f4;
+    background: #F5F5F5;;
     height:1200px;
     right:15px;
     border-right: 100px solid black;
@@ -43,9 +44,10 @@ position: absolute;
 width: 363px;
 height: 21px;
 left: 50px;
-font-family: 'Edu TAS Beginner', cursive;
-font-weight: 700;
-font-size: 33px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
 line-height: 19px;
 color: #333333;
 }
@@ -72,9 +74,10 @@ width: 363px;
 height: 21px;
 left: 50px;
 top: 67px;
-font-family: 'Edu TAS Beginner', cursive;
-font-weight: 700;
-font-size: 33px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
 line-height: 19px;
 color: #333333;
 }
@@ -99,9 +102,10 @@ height: 10px;
 left: 50px;
 top: 157px;
 
-font-family: 'Edu TAS Beginner', cursive;
-font-weight: 700;
-font-size: 33px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
 line-height: 19px;
 color: #333333;
 }
@@ -125,9 +129,10 @@ width: 363px;
 height: 10px;
 left: 50px;
 top: 257px;
-font-family: 'Edu TAS Beginner', cursive;
-font-weight: 700;
-font-size: 33px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
 line-height: 19px;
 color: #333333;
 }
@@ -151,9 +156,10 @@ width: 363px;
 height: 21px;
 left: 49px;
 top: 588px;
-font-family: 'Edu TAS Beginner', cursive;
-font-weight: 700;
-font-size: 33px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
 line-height: 19px;
 color: #333333;
 }
@@ -203,14 +209,18 @@ font-weight: 700;
     position: absolute;
     width: 214px;
     height: 46px;
-    font-family: 'Edu TAS Beginner', cursive;
-  font-weight:1000;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 21px;
   height:50px;
     left: 49px;
-    font-size:23px;
     top: 1073px;
     background: #44924C;
     border-radius: 10px;
+    color:white;
+    border:none;
 }
 
 .button:hover
