--- a/src/styles/MiddleSection.css
+++ b/src/styles/MiddleSection.css
@@ -4,7 +4,7 @@
     height: 925px;
     position:relative;
     left:-8px;
-    background: #e0ebef;
+    background: #ffffff;
     border-left: solid black;
     border-right:solid black;
     border-width: 109px;
@@ -15,14 +15,31 @@
     position: absolute;
     width: 912px;
     height: 24px;
-    left: 164px;
+    left: 64px;
     top: 100px;
-    font-family: 'Edu TAS Beginner', cursive;
+    font-family: 'Poppins';
+    font-style: normal;
     font-weight: 600;
-    font-size: 42px;
+    font-size: 32px;
     line-height: 20px;
     text-align: center;
-    color: #02500a;
+    color: #000000;
+}
+
+.title1
+{
+    position: absolute;
+    width: 912px;
+    height: 24px;
+    left: 345px;
+    top: 100px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 20px;
+    text-align: center;
+    color: #44924C;
 }
 
 .box1
@@ -32,7 +49,6 @@ width: 542px;
 height: 276px;
 left: 160px;
 top: 915px;
-
 background: #F8F9FD;
 border-radius: 20px;
 }
@@ -87,10 +103,11 @@ width: 266px;
 height: 52px;
 left: 40px;
 top: 82px;
-font-family: 'Edu TAS Beginner', cursive;
+font-family: 'Poppins';
+font-style: normal;
 font-style: normal;
 font-weight: 600;
-font-size: 38px;
+font-size: 24px;
 line-height: 50px;
 letter-spacing: -0.03em;
 color: #000000;
@@ -103,9 +120,10 @@ width: 471px;
 height: 50px;
 left: 41px;
 top: 149px;
-font-family: 'Edu TAS Beginner', cursive;
+font-family: 'Poppins';
+font-style: normal;
 font-weight: 500;
-font-size: 26px;
+font-size: 16px;
 line-height: 24px;
 letter-spacing: -0.02em;
 color: #64607D;
