--- a/src/styles/challenges.css
+++ b/src/styles/challenges.css
@@ -3,12 +3,13 @@
     position:relative;
     width:1302px;
     flex: 9;
-    bottom:41px;
+    bottom:-91px;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     margin: 20px;
     right:29px;
-    background-color:  #003145;;
+    background-color:  #002A3B;;;
     border-left:solid black;
 border-right:solid black;
 border-width: 100px;;
@@ -16,15 +17,16 @@ border-width: 100px;;
 
 .Title
 {
-    font-family: 'Edu TAS Beginner', cursive;
+  font-family: 'Poppins';
+  font-style: normal;
 font-weight: 600;
-font-size: 48px;
+font-size: 28px;
 position:relative;
 text-align: center;
 right:10px;
-background-color: #003145;
+background-color: #002A3B;;
 width:1302px;
-height:100px;
+height:150px;
 color:white;
 bottom:20px;
 border-left:solid black;
@@ -32,18 +34,24 @@ border-right:solid black;
 border-width: 100px;;
 }
 
+.titleBox
+{
+  position:relative;
+  top:35px;
+}
+
 .search
 {
     display:flex;
-    position:relative;
-    top:-20px;
+    
+    top:90px;
     font-family: 'Edu TAS Beginner', cursive;
     font-weight: 600;
     font-size: 48px;
     position:relative;
     text-align: center;
-    right:10px;
-    background-color: #003145;
+    right:100px;
+    background-color:#002A3B;;;
     width:1302px;
     height:150px;
     color:white;
@@ -59,7 +67,6 @@ position: relative;
 width: 829px;
 height: 50px;
 bottom: 40px;
-
 background: #FFFFFF;
 box-shadow: 0px 4px 50px rgba(111, 111, 111, 0.1);
 border-radius: 12px;
@@ -68,11 +75,12 @@ border-radius: 12px;
 .custom-select
 {
     box-sizing: border-box;
-    width: 135px;
+    width: 155px;
+    display:flex;
     height: 42px;
     position :relative;
     text-align:center;
-    left:100px;
+    left:190px;
     background: #FFFFFF;
     border: 1px solid #EAEAEA;
     border-radius: 12px;
@@ -80,45 +88,31 @@ border-radius: 12px;
     font-size:18px;;
 }
 
-.select-items
+.search-container
 {
-  background-color: DodgerBlue;
+  position:relative;
+  left:120px;
+  bottom:30px;
 }
+select optgroup{
+ 
+  color:rgb(28, 27, 27);
+  font-family: 'Poppins';
+  font-style: normal;
+  font-style:normal;
+  font-weight:normal;
+  }
 
-.button4
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    position:relative;
-    left:120px;
-    top:27px;
-    width: 114px;
-    height: 42px;
-    font-family: 'Edu TAS Beginner', cursive;
-  font-weight:1000;
-  height:50px;
-    
-    font-size:23px;
-   
-    background: #44924C;
-    border-radius: 10px;
-}
 
-.button4:hover
-{
-    background-color: aqua;
-    transform: scale(1.2);
-}
+
 
 .sort
 {
-    font-family: 'Edu TAS Beginner', cursive;
-  font-weight:1000;
-    font-size: 25px;
-    background-color: #44924C;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+    height:50px;
 }
 
 .difficulty
