--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -11,6 +11,8 @@
 {
     margin-left:20px;
     color:black;
-    font-family: 'Edu TAS Beginner', cursive;
-    font-size:25px;
+    font-family: 'Poppins';
+  font-style: normal;
+font-weight: 600;
+font-size: 28px;
 }
